@@ -5,14 +5,14 @@
     <line id="1" name="Первая линия" color="green"/>
   </lines>
   <stations>
-    <station id="1-01" name="Проспект Космонавтов" line="1" link="1-02"/>
-    <station id="1-02" name="Уралмаш" line="1" link="1-01,1-03"/>
-    <station id="1-03" name="Машиностроителей" line="1" link="1-02,1-04"/>
-    <station id="1-04" name="Уральская" line="1" link="1-03,1-05"/>
-    <station id="1-05" name="Динамо" line="1" link="1-04,1-06"/>
-    <station id="1-06" name="Площадь 1905 года" line="1" link="1-05,1-07"/>
-    <station id="1-07" name="Геологическая" line="1" link="1-06,1-08"/>
-    <station id="1-08" name="Чкаловская" line="1" link="1-07,1-09"/>
-    <station id="1-09" name="Ботаническая" line="1" link="1-08"/>
+    <station id="1-01" name="Проспект Космонавтов" line="1:1" link="1-02"/>
+    <station id="1-02" name="Уралмаш" line="1:2" link="1-01,1-03"/>
+    <station id="1-03" name="Машиностроителей" line="1:3" link="1-02,1-04"/>
+    <station id="1-04" name="Уральская" line="1:4" link="1-03,1-05"/>
+    <station id="1-05" name="Динамо" line="1:5" link="1-04,1-06"/>
+    <station id="1-06" name="Площадь 1905 года" line="1:6" link="1-05,1-07"/>
+    <station id="1-07" name="Геологическая" line="1:7" link="1-06,1-08"/>
+    <station id="1-08" name="Чкаловская" line="1:8" link="1-07,1-09"/>
+    <station id="1-09" name="Ботаническая" line="1:9" link="1-08"/>
   </stations>
 </tube>
