@@ -1,4 +1,5 @@
 0.06
+ - Implement station order.
  - Rewrite XML map to new version with line IDs.
 
 0.05 2015-10-16T11:57:49+02:00
